--- a/index.html
+++ b/index.html
@@ -235,6 +235,12 @@
       <img src="https://cdn-icons-png.flaticon.com/512/3322/3322056.png" alt="Dashboard 9" />
       <span>หลุมข้าง Vault</span>
     </a>
+    
+    <a href="https://lookerstudio.google.com/reporting/a8c1ea56-c535-44c0-a96f-15865ba20648" target="_blank" class="btn-link" data-category="LSM">
+      <img src="https://cdn-icons-png.flaticon.com/512/2553/2553692.png" alt="Dashboard 9" />
+      <span>Snackup & Choco</span>
+    </a>
+
 
     <a href="https://lookerstudio.google.com/reporting/6f22ff24-bcc7-4d4e-9b67-c1ba0d93b672" target="_blank" class="btn-link" data-category="LSM">
       <img src="https://cdn-icons-png.flaticon.com/512/1458/1458268.png" alt="Dashboard 10" />
@@ -300,4 +306,5 @@
 
 </body>
 </html>
+
 
