--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <button class="category-btn" data-category="P'J">P_Yui</button>
     <button class="category-btn" data-category="LSM">LSM</button>
     <button class="category-btn" data-category="Compet">Compet</button>
-    <button class="category-btn" data-category="other">Other</button>
+    <button class="category-btn" data-category="Project">Project</button>
   </div>
 
   <!-- ช่องค้นหา -->
@@ -241,10 +241,14 @@
       <span>Snackup & Choco</span>
     </a>
 
-
     <a href="https://lookerstudio.google.com/reporting/6f22ff24-bcc7-4d4e-9b67-c1ba0d93b672" target="_blank" class="btn-link" data-category="LSM">
       <img src="https://cdn-icons-png.flaticon.com/512/1458/1458268.png" alt="Dashboard 10" />
       <span>Missing AGC AC</span>
+    </a>
+
+    <a href="https://lookerstudio.google.com/reporting/252966f0-9153-4e35-9ed6-ba134ae984ad" target="_blank" class="btn-link" data-category="LSM">
+      <img src="https://cdn-icons-png.flaticon.com/512/1795/1795150.png" alt="Dashboard 10" />
+      <span>Store Tour</span>
     </a>
 
     <a href="https://lookerstudio.google.com/reporting/c81483cc-0095-4e2c-a231-8f13dff8f606/page/p_zoblimqltd" target="_blank" class="btn-link" data-category="Compet">
@@ -266,7 +270,12 @@
       <img src="https://cdn-icons-png.flaticon.com/512/8168/8168295.png" alt="Dashboard 10" />
       <span>Rebound</span>
     </a>
-
+    
+    <a href="https://lookerstudio.google.com/reporting/90b1245a-a10b-4608-ac20-a4dcf5ea6267" target="_blank" class="btn-link" data-category="Project">
+      <img src="https://cdn-icons-png.flaticon.com/512/4320/4320357.png" alt="Dashboard 10" />
+      <span>AllCarePharmacy</span>
+    </a>
+    
   </div>
 
   <script>
@@ -306,5 +315,6 @@
 
 </body>
 </html>
+
 
 
