--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
     .btn-link[data-category="other"] {
       background: linear-gradient(145deg, #1c1c1c, #2a2a2a);
     }
+    .btn-link[data-category="Project"] {
+      background: linear-gradient(145deg, #1c1c1c, #223742);
+    }
 
     .btn-link::before {
       content: '';
@@ -315,6 +318,7 @@
 
 </body>
 </html>
+
 
 
 
