--- a/index.html
+++ b/index.html
@@ -279,6 +279,15 @@
       <span>AllCarePharmacy</span>
     </a>
     
+    <a href="https://lookerstudio.google.com/reporting/4fc29e8f-602b-47a8-a285-a08db0082096" target="_blank" class="btn-link" data-category="Project">
+      <img src="https://cdn-icons-png.flaticon.com/512/2176/2176963.png" alt="Dashboard 10" />
+      <span>MiniPharmacy</span>
+    </a>
+    
+    <a href="https://lookerstudio.google.com/reporting/f6724a5f-2eb1-407b-b824-b4ad9dac4503" target="_blank" class="btn-link" data-category="Project">
+      <img src="https://cdn-icons-png.flaticon.com/512/1047/1047462.png" alt="Dashboard 10" />
+      <span>AllSelect</span>
+    </a>
   </div>
 
   <script>
@@ -318,6 +327,7 @@
 
 </body>
 </html>
+
 
 
 
