--- a/index.html
+++ b/index.html
@@ -253,6 +253,11 @@
       <img src="https://cdn-icons-png.flaticon.com/512/1795/1795150.png" alt="Dashboard 10" />
       <span>Store Tour</span>
     </a>
+    
+    <a href="https://lookerstudio.google.com/reporting/e286221c-59c8-4b7f-ad2f-8e925a0c7cf5" target="_blank" class="btn-link" data-category="LSM">
+      <img src="https://cdn-icons-png.flaticon.com/512/5346/5346481.png" alt="Dashboard 10" />
+      <span>[UB] Opentype</span>
+    </a>
 
     <a href="https://lookerstudio.google.com/reporting/c81483cc-0095-4e2c-a231-8f13dff8f606/page/p_zoblimqltd" target="_blank" class="btn-link" data-category="Compet">
       <img src="https://cdn-icons-png.flaticon.com/512/10755/10755167.png" alt="Dashboard 10" />
@@ -285,7 +290,7 @@
     </a>
     
     <a href="https://lookerstudio.google.com/reporting/f6724a5f-2eb1-407b-b824-b4ad9dac4503" target="_blank" class="btn-link" data-category="Project">
-      <img src="https://cdn-icons-png.flaticon.com/512/1047/1047462.png" alt="Dashboard 10" />
+      <img src="https://cdn-icons-png.flaticon.com/512/1448/1448438.png" alt="Dashboard 10" />
       <span>AllSelect</span>
     </a>
   </div>
@@ -327,6 +332,7 @@
 
 </body>
 </html>
+
 
 
 
