--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     .btn-link[data-category="FSE"] {
       background: linear-gradient(145deg, #1c1c1c, #2a2a3a);
     }
-    .btn-link[data-category="P'J"] {
+    .btn-link[data-category="P_Yui"] {
       background: linear-gradient(145deg, #1c1c1c, #3a2a2a);
     }
     .btn-link[data-category="LSM"] {
@@ -189,7 +189,7 @@
   <div class="category-buttons">
     <button class="category-btn active" data-category="all">ALL</button>
     <button class="category-btn" data-category="FSE">FSE</button>
-    <button class="category-btn" data-category="P'J">P_Yui</button>
+    <button class="category-btn" data-category="P_Yui">P_Yui</button>
     <button class="category-btn" data-category="LSM">LSM</button>
     <button class="category-btn" data-category="Compet">Compet</button>
     <button class="category-btn" data-category="Project">Project</button>
@@ -224,17 +224,17 @@
       <span>SukiCup</span>
     </a>
 
-    <a href="https://lookerstudio.google.com/reporting/f725f9ba-595c-4049-bc8d-46b605bbd286/page/p_02ibc9b58c" target="_blank" class="btn-link" data-category="P'J">
+    <a href="https://lookerstudio.google.com/reporting/f725f9ba-595c-4049-bc8d-46b605bbd286/page/p_02ibc9b58c" target="_blank" class="btn-link" data-category="P_Yui">
       <img src="https://cdn-icons-png.flaticon.com/512/751/751061.png" alt="Bun" />
       <span>GoPan</span>
     </a>
 
-    <a href="https://lookerstudio.google.com/reporting/ebef5dec-9199-4461-91e5-dc4c034895f7/page/p_02ibc9b58c" target="_blank" class="btn-link" data-category="P'J">
+    <a href="https://lookerstudio.google.com/reporting/ebef5dec-9199-4461-91e5-dc4c034895f7/page/p_02ibc9b58c" target="_blank" class="btn-link" data-category="P_Yui">
       <img src="https://cdn-icons-png.flaticon.com/512/3595/3595455.png" alt="Pizza" />
       <span>GoPizza</span>
     </a>
 
-    <a href="https://lookerstudio.google.com/reporting/e4b5c380-9403-4e1c-852e-9c50debb1883/page/p_fmw4hgzvrd" target="_blank" class="btn-link" data-category="P'J">
+    <a href="https://lookerstudio.google.com/reporting/e4b5c380-9403-4e1c-852e-9c50debb1883/page/p_fmw4hgzvrd" target="_blank" class="btn-link" data-category="P_Yui">
       <img src="https://cdn-icons-png.flaticon.com/512/3183/3183480.png" alt="Sushi Set" />
       <span>Uoriki</span>
     </a>
@@ -309,12 +309,12 @@
       <span>LSM_Sale</span>
     </a>
 
-    <a href="https://lookerstudio.google.com/reporting/b22458d3-8f6c-4633-8c29-a461cde8abcf/page/g8eAF" target="_blank" class="btn-link" data-category="Tools  ">
+    <a href="https://lookerstudio.google.com/reporting/b22458d3-8f6c-4633-8c29-a461cde8abcf/page/g8eAF" target="_blank" class="btn-link" data-category="Tools">
       <img src="https://cdn-icons-png.flaticon.com/512/16799/16799322.png" alt="Dashboard 10" />
       <span>Searching</span>
     </a>
 
-    <a href="https://lookerstudio.google.com/reporting/6cc0284d-39e5-4bf7-91b9-4ae0e810e416/page/p_i20dh0iomd" target="_blank" class="btn-link" data-category="Tools  ">
+    <a href="https://lookerstudio.google.com/reporting/6cc0284d-39e5-4bf7-91b9-4ae0e810e416/page/p_i20dh0iomd" target="_blank" class="btn-link" data-category="Tools">
       <img src="https://cdn-icons-png.flaticon.com/512/11628/11628393.png" alt="Dashboard 10" />
       <span>AdhocMissing</span>
     </a>
@@ -358,6 +358,7 @@
 
 </body>
 </html>
+
 
 
 
