--- a/index.html
+++ b/index.html
@@ -258,6 +258,11 @@
       <span>Store Tour</span>
     </a>
     
+    <a href="https://lookerstudio.google.com/reporting/de4036b8-270f-4b2b-9665-b26fca19adfc" target="_blank" class="btn-link" data-category="LSM">
+      <img src="https://cdn-icons-png.flaticon.com/512/993/993723.png" alt="Dashboard 10" />
+      <span>Missing All Project</span>
+    </a>
+    
     <a href="https://lookerstudio.google.com/reporting/e286221c-59c8-4b7f-ad2f-8e925a0c7cf5" target="_blank" class="btn-link" data-category="LSM">
       <img src="https://cdn-icons-png.flaticon.com/512/5346/5346481.png" alt="Dashboard 10" />
       <span>[UB] Opentype</span>
@@ -377,6 +382,7 @@
 
 </body>
 </html>
+
 
 
 
