--- a/index.html
+++ b/index.html
@@ -238,6 +238,11 @@
       <span>Uoriki</span>
     </a>
 
+    <a href="https://lookerstudio.google.com/reporting/bf4d91e9-7971-4422-b866-b1b1a4566274" target="_blank" class="btn-link" data-category="LSM">
+      <img src="https://cdn-icons-png.flaticon.com/512/12698/12698378.png" alt="Dashboard 9" />
+      <span>GQ Easy</span>
+    </a>
+    
     <a href="https://lookerstudio.google.com/reporting/150b8a3f-7ea0-4bab-9053-c734508b0d64" target="_blank" class="btn-link" data-category="LSM">
       <img src="https://cdn-icons-png.flaticon.com/512/2780/2780087.png" alt="Dashboard 9" />
       <span>หลุมข้าง Vault</span>
@@ -246,6 +251,11 @@
     <a href="https://lookerstudio.google.com/reporting/a8c1ea56-c535-44c0-a96f-15865ba20648" target="_blank" class="btn-link" data-category="LSM">
       <img src="https://cdn-icons-png.flaticon.com/512/2553/2553692.png" alt="Dashboard 9" />
       <span>Snackup & Choco</span>
+    </a>
+    
+    <a href="https://lookerstudio.google.com/reporting/c541f5d7-8c65-44e9-b0b1-98bc29db3f79" target="_blank" class="btn-link" data-category="LSM">
+      <img src="https://cdn-icons-png.flaticon.com/512/4080/4080314.png" alt="Dashboard 9" />
+      <span>ChocoClub</span>
     </a>
 
     <a href="https://lookerstudio.google.com/reporting/6f22ff24-bcc7-4d4e-9b67-c1ba0d93b672" target="_blank" class="btn-link" data-category="LSM">
@@ -382,6 +392,7 @@
 
 </body>
 </html>
+
 
 
 
