--- a/index.html
+++ b/index.html
@@ -222,6 +222,11 @@
       <img src="https://cdn-icons-png.flaticon.com/512/4809/4809640.png" alt="SukiCup" />
       <span>Suki Cup</span>
     </a>
+    
+    <a href="https://lookerstudio.google.com/reporting/e679ba5d-e517-4464-b621-f2a2b2ced9cc" target="_blank" class="btn-link" data-category="FSE">
+      <img src="https://cdn-icons-png.flaticon.com/512/2098/2098249.png" alt="SukiCup" />
+      <span>Gaggia</span>
+    </a>
 
     <a href="https://lookerstudio.google.com/reporting/f725f9ba-595c-4049-bc8d-46b605bbd286/page/p_02ibc9b58c" target="_blank" class="btn-link" data-category="P_Yui">
       <img src="https://cdn-icons-png.flaticon.com/512/751/751061.png" alt="Bun" />
@@ -392,6 +397,7 @@
 
 </body>
 </html>
+
 
 
 
