--- a/index.html
+++ b/index.html
@@ -202,8 +202,13 @@
       <img src="https://cdn-icons-png.flaticon.com/512/590/590836.png" alt="Coffee Drip" />
       <span>Drip Coffee</span>
     </a>
-
+    
     <a href="https://lookerstudio.google.com/reporting/5211caf1-5913-4379-859c-0d2c5014187a" target="_blank" class="btn-link" data-category="FSE">
+      <img src="https://cdn-icons-png.flaticon.com/512/2674/2674067.png" alt="Tea" />
+      <span>Fried Food</span>
+    </a>
+    
+    <a href="https://lookerstudio.google.com/reporting/01d65115-314c-447e-81e8-c8e2af676a45" target="_blank" class="btn-link" data-category="FSE">
       <img src="https://cdn-icons-png.flaticon.com/512/5304/5304725.png" alt="Tea" />
       <span>All Tea</span>
     </a>
@@ -402,6 +407,7 @@
 
 </body>
 </html>
+
 
 
 
